[package]
name = "padme-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
padme-core = { path = "./core" }
log = "0.4"
env_logger = "0.9"
minifb = "0.22"
cpal = "0.13.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
